<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/fragment_item_detail"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin"
    tools:context=".ItemDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detail_head"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="@id/fragment_item_detail"
        app:layout_constraintEnd_toEndOf="@id/fragment_item_detail"
        app:layout_constraintTop_toTopOf="@id/fragment_item_detail"
        >

        <TextView
            android:id="@+id/item_name"
            style="@style/Widget.Inventory.TextView"
            android:layout_width="wrap_content"
            android:textSize="24sp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Screwdrivers" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detail_body"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="20dp"
        app:layout_constraintEnd_toEndOf="@id/fragment_item_detail"
        app:layout_constraintStart_toStartOf="@id/fragment_item_detail"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_head">

        <TextView
            android:id="@+id/item_price_label"
            style="@style/Widget.Inventory.TextView"
            android:layout_width="wrap_content"
            android:layout_marginVertical="10dp"
            android:text="@string/price_label"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/item_price"
            style="@style/Widget.Inventory.TextView"
            android:layout_width="wrap_content"
            android:layout_marginVertical="10dp"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@id/item_count"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Rp5,000" />

        <TextView
            android:id="@+id/item_count_label"
            style="@style/Widget.Inventory.TextView"
            android:layout_width="wrap_content"
            android:text="@string/quantity"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/item_price_label" />

        <TextView
            android:id="@+id/item_count"
            style="@style/Widget.Inventory.TextView"
            android:layout_width="0dp"
            android:layout_marginLeft="20dp"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/item_count_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/item_count_label"
            app:layout_constraintTop_toTopOf="@id/item_count_label"
            tools:text="1000" />

<!--        tools:layout_editor_absoluteX="144dp"-->
<!--        tools:layout_editor_absoluteY="38dp"-->
        <Button
            android:id="@+id/sell_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sell"
            tools:layout_editor_absoluteY="75dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/item_count_label"
            android:visibility="gone"/>

        <Button
            android:id="@+id/delete_item"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textColor="@color/red_700"
            app:backgroundTint="#00D32F2F"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/edit_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/edit_item"
            android:src="@drawable/ic_edit"
            app:tint="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@id/delete_item"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>


